<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">云中校车</string>
    <string name="app_name_teacher">教师助手</string>
    <string name="mobile_num">输入已登记的手机号码</string>
    <string name="verify_code">验证码</string>
    <string name="no_network">无法链接网络，请检查网络设置</string>
    <string name="confirm_cancel_upload">确定要取消发送吗？</string>
    <string name="server_error">出现错误了，一会再试试</string>
    <string name="unknow_message">消息类型不支持</string>
    <string name="invalid_mobile">手机号码验证失败，请联系学校老师</string>
    <string name="SMS_oversend">验证码当天请求次数过多，改天再试</string>
    <string name="invalid_verify_code">验证码错误</string>
    <string name="failure_baseinfo">获取基础信息错误</string>
    <string name="failure_studentinfo">获取学生信息错误</string>
    <string name="failure_renewsid">更新会话ID失败</string>
    <string name="failure_loginwithtoken">无法登录系统</string>
    <string name="failure_unknown">未知错误</string>
    <string name="auth_failed">账号或者密码错误，再试试吧</string>
    <string name="no_message">没有任何消息</string>
    <string name="invalid_picture">请选择有效的图片</string>
    <string name="picture_ops">照片操作</string>
    <string name="picture_ops_album">选择本地相册</string>
    <string name="no_content">没有要发送内容</string>
    <string name="picture_ops_take_pic">拍照</string>
    <string name="OKAY">我知道了</string>
    <string name="action_contact">通信录(%s)</string>
    <string name="realtime_streaming">在线直播中......</string>
    <string name="headerCode">Code</string>
    <string name="out_time">Error</string>
    <string name="streaming_error">Error</string>
    <string name="isLoading">Loading</string>
    <string name="minute_befor">分钟前</string>
    <string name="hour_befor">小时前</string>
    <string name="totalattendance">出勤总数</string>
    <string name="current_day_attendance_records">今日考勤次数</string>
    <string name="total_attendance_records">本月考勤总次数</string>
    <string name="action_today">Today</string>
    <string name="action_day_view">Day view</string>
    <string name="action_three_day_view">3 day view</string>
    <string name="action_week_view">Week view</string>
    <string name="module_explore">发现</string>
    <string name="module_teacher">班级教师</string>
    <string name="module_hobby">兴趣爱好</string>
    <string name="module_class">我的班级</string>
    <string name="module_aboutme">我</string>
    <string name="companyweb">关于我们</string>
    <string name="module_conversation">对话:</string>
    <string name="avatar">更换头像</string>
    <string name="name">名字</string>
    <string name="phone">联系方式</string>
    <string name="relation">与孩子关系</string>
    <string name="switch_child">切换孩子</string>
    <string name="switch_class">切换班级</string>
    <string name="clear_cache">清除缓存</string>
    <string name="upload_record">我的相册</string>
    <string name="aboutus">关于我们</string>
    <string name="usersetting">用户设置</string>
    <string name="systemsetting">系统设置</string>
    <string name="helpfeedback">帮助与反馈</string>
    <string name="logout">退出登录</string>
    <string name="picturetype">照片</string>
    <string name="confirm_notice">确认回执</string>
    <string name="confirmed_notice">已回执</string>
    <string name="confirm_activity">确认报名</string>
    <string name="confirmed_activity">已经报名</string>
    <string name="noticetype">班级通知</string>
    <string name="attendancetype">今日考勤</string>
    <string name="openclass">视频公开课</string>
    <string name="report">班级报告</string>
    <string name="food">食谱</string>
    <string name="schedule">课程表</string>
    <string name="activity">活动</string>
    <string name="picture">相册</string>
    <string name="attendancetime">考勤时间: </string>
    <string name="classify">分类</string>
    <string name="all">全部</string>
    <string name="slogan">云中校车，以爱为名</string>
    <string name="title_activity_startup">StartupActivity</string>

    <string name="parents">家长</string>
    <string name="teachers">教师</string>

    <string name="altersignout">"注意：本地数据将会被删除"</string>

    <string name="pictureshare">分享</string>
    <string name="picturesave">保存</string>
    <string name="gallery_choose">Gallery Select</string>
    <string name="camera_choose">Now Photograph</string>
    <string name="title_activity_select_student">SelectStudentActivity</string>

    <string name="delete">删除</string>
    <string name="upload">文件上传</string>
    <string name="send">发送</string>
    <string name="comment_hint">此刻你的想法</string>
    <string name="prompt_tagging">别忘了帮我添加标签哦！</string>
    <string name="prompt_send">发给谁呢？</string>

    <string name="aboutmeurl"> http://www.yunxiaoche.com </string>

    <string name="scan_tips">将二维码图片对准扫描框即可自动扫描</string>
    <string name="scan">扫一扫</string>

    <string name="fonttoggler">改变字体</string>

    <string name="noschool">缺乏学校信息,请联系园方检查后台数据配置。</string>
    <string name="noclass">缺乏班级班级信息,请联系园方检查后台数据配置。</string>
    <string name="noteacher">缺乏教师信息,请联系园方检查后台数据配置。</string>
    <string name="nostudent">缺乏孩子信息,请联系园方检查后台数据配置。</string>

</resources>