<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <FrameLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="#FFFFFFFF"
                android:id="@+id/avatar">

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:orientation="vertical"
                    android:layout_marginLeft="120dp">

                    <TextView
                        style="@style/CardTitle"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/big_padding"
                        android:text="@string/name"
                        android:textColor="@color/primary_dark" />

                    <TextView
                        style="@style/CardDescription"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/small_padding"
                        tools:text="星星幼儿园"
                        android:textColor="@color/primary_dark" />

                </LinearLayout>

            </FrameLayout>

            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginLeft="20dp"
                android:layout_marginBottom="0dp"
                android:background="@drawable/ic_image_default"
                android:layout_marginTop="-60dp" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:background="#FFFFFFFF">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:baselineAligned="true"
                    android:background="#FFFFFFFF"
                    android:id="@+id/linearLayoutChildSetting">

                    <TextView
                        style="@style/CardTitle"
                        android:textColor="@android:color/black"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="85"
                        android:padding="@dimen/big_padding"
                        android:text="@string/childsetting" />

                    <ImageView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="15"
                        android:background="@drawable/ic_image_default" />
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_marginLeft="@dimen/big_padding"
                    android:layout_height="1px"
                    android:background="#FF000000" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:background="#FFFFFFFF"
                    android:id="@+id/linearLayoutSystemSetting">

                    <TextView
                        style="@style/CardTitle"
                        android:layout_width="0dp"
                        android:textColor="@android:color/black"
                        android:layout_height="wrap_content"
                        android:layout_weight="70"
                        android:padding="@dimen/big_padding"
                        android:text="@string/systemsetting" />

                    <TextView
                        android:id="@+id/textViewNotify"
                        android:textColor="@android:color/black"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="15"
                        android:padding="@dimen/small_padding" />

                    <ImageView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="15"
                        android:background="@drawable/ic_image_default" />
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_marginLeft="@dimen/big_padding"
                    android:layout_height="1px"
                    android:background="#FF000000"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:background="#FFFFFFFF"
                    android:id="@+id/linearLayoutHelp">

                    <TextView
                        style="@style/CardTitle"
                        android:layout_width="0dp"
                        android:textColor="@android:color/black"
                        android:layout_height="wrap_content"
                        android:layout_weight="85"
                        android:padding="@dimen/big_padding"
                        android:text="@string/helpfeedback" />

                    <ImageView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="15"
                        android:background="@drawable/ic_image_default" />
                </LinearLayout>
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="10dp"
                android:background="#00000000"/>

            <Button
                android:id="@+id/logoutButton"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/logout"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp" />

        </LinearLayout>
    </ScrollView>

</LinearLayout>