<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:background="@color/background_window">


    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/avatar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:background="#FFFFFF">

                <TextView
                    style="@style/CardTitle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="70"
                    android:padding="@dimen/big_padding"
                    android:text="@string/avatar"
                    android:textColor="@color/primary_dark"
                    android:textSize="16sp" />

                <ImageView
                    android:id="@+id/imageViewAvatar"
                    android:layout_width="72dp"
                    android:layout_height="72dp"
                    android:layout_weight="15"
                    android:padding="@dimen/small_padding"
                    android:contentDescription="avatar" />

                <ImageView
                    android:layout_width="15dp"
                    android:layout_height="15dp"
                    android:background="@drawable/ic_next"
                    android:scaleType="fitCenter"
                    android:layout_marginRight="5dp" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="5dp"
                android:background="#00000000"/>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:background="#FFFFFFFF"
                android:layout_gravity="center_vertical">

                <View
                    android:layout_width="match_parent"
                    android:layout_marginLeft="@dimen/big_padding"
                    android:layout_height="1px"
                    android:visibility="gone"
                    android:background="#FF000000" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:visibility="gone"
                    android:orientation="horizontal"
                    android:background="#FFFFFFFF"
                    android:id="@+id/linearLayoutPhone"
                    android:gravity="center_vertical">

                    <TextView
                        style="@style/CardTitle"
                        android:layout_width="0dp"
                        android:textColor="@android:color/black"
                        android:layout_height="wrap_content"
                        android:layout_weight="70"
                        android:padding="@dimen/big_padding"
                        android:text="@string/phone"
                        android:textSize="16dp" />

                    <TextView
                        android:id="@+id/textViewPhone"
                        android:textColor="@android:color/black"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="15"
                        android:padding="@dimen/small_padding" />

                    <ImageView
                        android:layout_width="15dp"
                        android:layout_height="15dp"
                        android:background="@drawable/ic_next"
                        android:layout_marginRight="5dp" />
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_marginLeft="@dimen/big_padding"
                    android:layout_height="1px"
                    android:background="#FF000000"/>

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:layout_marginTop="10dp"
                android:background="#00000000"/>

            <Button
                android:id="@+id/switchButton"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/switch_class"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:textColor="#FFFFFF"
                android:background="@drawable/shape_normal_big_button"
                android:textSize="20dp" />

        </LinearLayout>
    </ScrollView>

</RelativeLayout>